[package]
name = "cryptopals"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]

[[bin]]
name = "s1c1"
path = "challenges/s1/c1/main.rs"

[[bin]]
name = "s1c2"
path = "challenges/s1/c2/main.rs"

[[bin]]
name = "s1c3"
path = "challenges/s1/c3/main.rs"

[[bin]]
name = "s1c4"
path = "challenges/s1/c4/main.rs"

[[bin]]
name = "s1c5"
path = "challenges/s1/c5/main.rs"
